--- a/_config.yml
+++ b/_config.yml
@@ -62,13 +62,13 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-theme: archer
+theme: theme
 
 # Deployment
 deploy:
   type:
   
-# Archer Theme
+# Theme
 jsonContent:
   meta: false
   pages: false
