--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.1"
+    "version": "3.4.4"
   },
   "dependencies": {
+    "generate-robotstxt": "^5.0.2",
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -23,5 +24,11 @@
     "grunt-robots-txt": "^1.0.1",
     "grunt-shell": "^2.1.0",
     "grunt-sitemap": "^1.2.1"
+  },
+  "scripts": {
+    "robotstxt": "node scripts/generate-robotstxt.js",
+    "robotstxt:dev": "npm run robotstxt -- dev",
+    "robotstxt:staging": "npm run robotstxt -- staging",
+    "robotstxt:prod": "npm run robotstxt -- prod"
   }
 }
