--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "version": "3.4.4"
   },
   "dependencies": {
+    "aws-sdk": "2.175.0",
+    "flat-cache": "^1.3.0",
     "generate-robotstxt": "^5.0.2",
+    "hasha": "^3.0.0",
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -38,6 +41,9 @@
     "sitemap": "node scripts/generate-sitemap.js",
     "sitemap:dev": "npm run sitemap -- dev",
     "sitemap:staging": "npm run sitemap -- staging",
-    "sitemap:prod": "npm run sitemap -- prod"
+    "sitemap:prod": "npm run sitemap -- prod",
+    "s3upload": "node scripts/s3-upload.js",
+    "s3upload:staging": "npm run s3upload -- staging",
+    "s3upload:prod": "npm run s3upload -- prod"
   }
 }
