--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   },
   "dependencies": {
     "aws-sdk": "2.175.0",
-    "flat-cache": "^1.3.0",
     "generate-robotstxt": "^5.0.2",
-    "hasha": "^3.0.0",
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -20,8 +18,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "sitemap": "^1.13.0",
-    "walkdir": "0.0.12"
+    "mime": "^2.1.0",
+    "sitemap": "^1.13.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
