--- a/package.json
+++ b/package.json
@@ -22,13 +22,6 @@
     "mime": "^2.1.0",
     "sitemap": "^1.13.0"
   },
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-aws-s3": "^2.0.0",
-    "grunt-robots-txt": "^1.0.1",
-    "grunt-shell": "^2.1.0",
-    "grunt-sitemap": "^1.2.1"
-  },
   "scripts": {
     "shell:clean": "hexo clean",
     "shell:generate": "hexo generate",
@@ -41,7 +34,7 @@
     "sitemap:dev": "npm run sitemap -- dev",
     "sitemap:staging": "npm run sitemap -- staging",
     "sitemap:prod": "npm run sitemap -- prod",
-    "s3upload": "node build-scripts/s3-upload.js",
+    "s3upload": "node build-scripts/s3-uploagd.js",
     "s3upload:staging": "npm run s3upload -- staging",
     "s3upload:prod": "npm run s3upload -- prod",
     "start": "npm run shell:clean && npm run shell:generate && npm run sitemap:dev && npm run robotstxt:dev && npm run shell:server",
