--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
           esac
 
   deploy:
+    docker:
+      - image: circleci/node:latest
+
     steps:
       - run:
         name: Deploy
