Updated circleci configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
             - ./node_modules
 
       - run:
-        name: Build
-        command: >
+        command: |
           case $CIRCLE_BRANCH in
             master)
               npm run build:production
@@ -47,8 +46,7 @@ jobs:
 
     steps:
       - run:
-        name: Deploy
-        command: >
+        command: |
           case $CIRCLE_BRANCH in
             master)
               npm run deploy:production
