Updated circleci configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
 
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ~/kleips/node_modules
 
       - run:
           command: |
