--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,11 @@
 #
 version: 2
 jobs:
+  dependencies:
+    docker:
+      - image: circleci/node:latest
+    working_directory: ~/kleips
+
   build:
     docker:
       - image: circleci/node:latest
@@ -12,7 +17,7 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v2-dependencies-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install Hexo-CLI
@@ -22,7 +27,7 @@ jobs:
           command: sudo npm install
 
       - save_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v2-dependencies-{{ checksum "package-lock.json" }}
           paths:
             - ~/kleips/node_modules
 
