--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,6 @@ jobs:
     docker:
       - image: circleci/node:latest
     working_directory: ~/kleips
-
-  build:
-    docker:
-      - image: circleci/node:latest
-    working_directory: ~/kleips
     steps:
       - checkout
 
@@ -31,8 +26,18 @@ jobs:
           paths:
             - ~/kleips/node_modules
 
+  build:
+    docker:
+      - image: circleci/node:latest
+    working_directory: ~/kleips
+    steps:
+      - checkout
+
+      - restore_cache:
+          key: v2-dependencies-{{ checksum "package-lock.json" }}
+
       - run:
-          name: Build based on Banch
+          name: Build with Branch Check
           command: |
             case $CIRCLE_BRANCH in
             master)
@@ -47,20 +52,24 @@ jobs:
             esac
 
       - save_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-build-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - ~/kleips
+            - ~/kleips/public
 
   deploy:
     docker:
       - image: circleci/node:latest
     working_directory: ~/kleips
     steps:
+      - checkout
+
       - restore_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-build-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          key: v2-dependencies-{{ checksum "package-lock.json" }}
 
       - run:
-          name: Deploy based on Banch
+          name: Deploy with Branch Check
           command: |
             case $CIRCLE_BRANCH in
             master)
@@ -78,9 +87,13 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
+      - dependencies
+      - build:
+          requires:
+            - dependencies
       - deploy:
           requires:
+            - dependencies
             - build
           filters:
             branches:
