--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: v3-dependencies-{{ checksum "~/kleips/package-lock.json" }}
+          key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
 
       - run:
           name: Install Hexo-CLI
@@ -22,7 +22,7 @@ jobs:
           command: sudo npm install
 
       - save_cache:
-          key: v3-dependencies-{{ checksum "~/kleips/package-lock.json" }}
+          key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
           paths:
             - ~/kleips/node_modules
 
@@ -34,7 +34,7 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: v3-dependencies-{{ checksum "~/kleips/package-lock.json" }}
+          key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
 
       - run:
           name: Build with Branch Check
@@ -66,7 +66,7 @@ jobs:
       - restore_cache:
           key: v1-build-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
-          key: v3-dependencies-{{ checksum "~/kleips/package-lock.json" }}
+          key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
 
       - run:
           name: Deploy with Branch Check
