--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - checkout
 
+      - run: cat ~/kleips/package.json
+      - run: md5sum ~/kleips/package.json
+
       - restore_cache:
           key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
 
@@ -20,6 +23,9 @@ jobs:
       - run:
           name: Install Dependencies
           command: sudo npm install
+
+      - run: cat ~/kleips/package.json
+      - run: md5sum ~/kleips/package.json
 
       - save_cache:
           key: v3-dependencies-{{ checksum "~/kleips/package.json" }}
