--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,16 @@ theme: theme
 deploy:
   type:
 
+# Atom Feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+
 # Theme
 jsonContent:
   meta: false
