--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kleips.com",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "hexo": {
     "version": "3.4.4"
@@ -15,6 +15,7 @@
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
     "hexo-generator-tag": "^0.2.0",
